# ShotOcr_C

./: .gitignore  CMakeLists.txt
include/: AppManager.h  HotkeyManager.h  ScreenCapture.h  ScreenShotOCR.h  StringUtils.h  VoiceRecognizer.h
src/: AppManager.cpp  HotkeyManager.cpp  ScreenCapture.cpp  ScreenShotOCR.cpp  ToastWindow.cpp  VoiceRecognizer.cpp  main.cpp
